--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="./favi.png" width="25px" height="25px" />
+    <link rel="icon" href="./card-games.png" width="25px" height="25px" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta
       name="description"
